<resources>
    <string name="app_name">ExpenseTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_msg">Welcome To Your App</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="title">Expense Tracker</string>
    <string name="coins">coins</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="username">Username</string>
    <string name="are_you_new_user_register">Are you new User? Register</string>
    <string name="login_title">Login To\nYour Account</string>
    <string name="current_balance_text">Current Balance</string>


    <string-array name="transaction_types">
        <item>Income</item>
        <item>Expense</item>
    </string-array>


    <string-array name="months">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="years">
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
    </string-array>
</resources>