<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SignupFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/create_account"
        android:letterSpacing="0.05"
        android:textAlignment="center"
        android:textColor="@color/dark_purple"
        android:textSize="29sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="no"
        android:backgroundTint="@color/dark_purple"
        android:drawableStart="@drawable/name"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:inputType="text"
        android:maxWidth="400dp"
        android:minWidth="200dp"
        android:textColorHint="@color/dark_purple"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="no"
        android:backgroundTint="@color/dark_purple"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxWidth="400dp"
        android:minWidth="200dp"
        android:textColorHint="@color/dark_purple"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextUsername" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="no"
        android:backgroundTint="@color/dark_purple"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxWidth="400dp"
        android:minWidth="200dp"
        android:textColorHint="@color/dark_purple"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:background="@drawable/btn_login2_design"
        android:fontFamily="@font/roboto_bold"
        android:paddingHorizontal="70dp"
        android:paddingVertical="15dp"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/dark_purple"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextConfirmPassword" />

    <TextView
        android:id="@+id/textviewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/already_have_an_account_login"
        android:textColor="@color/dark_purple"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCreateAccount"
        app:layout_constraintVertical_bias="0.01" />

</androidx.constraintlayout.widget.ConstraintLayout>
